Deployment/Azure/k8s/broker.yaml
# ----------------------------------------------------
# File: broker.yaml
# ----------------------------------------------------

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-broker-deploy
  namespace: bankmore
  labels:
    app: kafka-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker
  template:
    metadata:
      labels:
        app: kafka-broker
    spec:
      containers:
      - name: kafka-broker
        image: confluentinc/cp-kafka:7.8.0
        ports:
          - containerPort: 29092
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 512Mi
        livenessProbe:
          exec:
            command: ["/bin/sh", "-c", "echo OK"]
          initialDelaySeconds: 40
          periodSeconds: 30
        readinessProbe:
          exec:
            command: ["/bin/sh", "-c", "echo OK"]
          initialDelaySeconds: 40
          periodSeconds: 30
