Deployment/Azure/k8s/kafka-ui.yaml
# ----------------------------------------------------
# File: kafka-ui.yaml
# ----------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-monitoring-ui
  namespace: bankmore
  labels:
    app: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
      - name: kafka-ui
        image: provectuslabs/kafka-ui:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: bankmore
spec:
  ports:
  - port: 8082
    targetPort: 8080
  selector:
    app: kafka-ui
  type: LoadBalancer
