Deployment/Azure/k8s/zookeeper.yaml
# ----------------------------------------------------
# File: zookeeper.yaml
# ----------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: bankmore
  labels:
    app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: confluentinc/cp-zookeeper:7.8.0
        ports:
        - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: bankmore
spec:
  ports:
  - port: 2181
    targetPort: 2181
  selector:
    app: zookeeper
  type: ClusterIP
